Add data files to Git LFS and fix Streamlit Cloud deployment
- Track CSV files with Git LFS
- Add git-lfs to packages.txt for Streamlit Cloud
- Add automatic LFS file download check in Streamlit app
- Improve error handling for missing data files

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ env/
 # Data files (large files)
 data/raw/*.csv.gz
 data/raw/*.csv
-data/processed/*.csv
+# data/processed/*.csv - Now tracked with Git LFS
 
 # Models (large files)
 models/*.joblib
